--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
+									<h2>Who we are</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -107,11 +107,33 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
+							<h2>the 2026 Edition</h2>
+							<p>Here we need to collect all the information about this year run and can be updated as we go. I also have created a further page with more in detail information </p>
+							<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2> Call for attendees</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="2026.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+								</section>
 								<section>
-									<form method="post" action="#">
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2> Venue</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="2026.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+								</section>
+								<!-- <form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -129,9 +151,8 @@
 										<ul class="actions">
 											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
-									</form>
-								</section>
-								<section>
+									</form> -->
+								<!-- <section>
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
@@ -158,7 +179,7 @@
 											</ul>
 										</li>
 									</ul>
-								</section>
+								</section> -->
 							</div>
 						</div>
 					</section>
@@ -169,7 +190,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; DH & RSE Summer School. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
