--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="three" class="wrapper style2 spotlights">
 						<div class="inner">
 							<h2>the 2026 Edition</h2>
 							<p>Here we need to collect all the information about this year run and can be updated as we go. I also have created a further page with more in detail information </p>
