Update div class

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 				<!-- Three -->
 					<section id="three" class="wrapper style2 spotlights">
-						<div class="inner">
+						<!-- <div class="inner"> -->
 							<h2>the 2026 Edition</h2>
 							<p>Here we need to collect all the information about this year run and can be updated as we go. I also have created a further page with more in detail information </p>
 							<section>
@@ -118,7 +118,7 @@
 									<ul class="actions">
 										<li><a href="2026.html" class="button">Learn more</a></li>
 									</ul>
-								</div>
+								<!-- </div> -->
 							</div>
 								</section>
 								<section>
